# portopt

./: .cursorrules  .editorconfig  .gitignore  Pipfile  README.md  pyproject.toml
data/: example_fund_matrix.csv
docs/internal/: METRICS.md  design-principles-and-standards.md  design-principles.md  development-process.md  system-architecture.md
docs/internal/adr/: 001-double-counting-prevention.md  002-undefined-factor-handling.md  README.md
docs/internal/changelog/: 000-changelog-template.md  README.md
docs/internal/specs/: performance-analysis.md  (+1 more)
notebooks/: account.ipynb  backtest.ipynb  cvxpy.ipynb  dataprep.ipynb  evalports.ipynb  factor.ipynb  fama_french.ipynb  holdings.ipynb  market_data.ipynb  miosqp.ipynb  pcrm_analysis.ipynb  portfolio.ipynb  rebalance.ipynb  scip.ipynb  simple_example.ipynb
notebooks/eval-proto/: README.md  alphavantage.ipynb  alt-portfolio.ipynb  duckdb.ipynb  fund-info.ipynb  ibis-framework.ipynb  load-holdings-test.ipynb  miosqp.ipynb  pcrm_analysis.ipynb  pyportfolioopt.ipynb  scip.ipynb  yahoo-finance.ipynb
src/: account.py  config.py  constants.py  factor.py  fama_french.py  fundinfo.py  holdings.py  market_data.py  porteval.py  portfolio.py  portopt.py  utils.py
src/portopt/: __init__.py  account.py  config.py  constants.py  cvxpy_utils.py  factor.py  fama_french.py  fundinfo.py  holdings.py  market_data.py  metrics.py  porteval.py  portfolio.py  portopt.py  rebalance.py  rebalance_utils.py  utils.py
tests/: __init__.py  test_holdings.py  test_market_data.py  test_metrics.py  test_portfolio_metrics.py  test_rebalance.py
(+38 files in other folders)
