[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portopt"
version = "0.1.0"
description = "Portfolio optimization and analysis tools"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="John Maloney" },
]
dependencies = [
    "argparse",
    "cvxpy",
    "pandas",
    "pyscipopt",
    "matplotlib",
    "numpy",
    "duckdb",
    "yfinance",
    "seaborn",
    "scikit-learn",
    "pyportfolioopt",
    "statsmodels",
    "bt",
    "pyyaml",
    "duckdb",
]

[project.urls]
Homepage = "https://github.com/jmmaloney3/portopt"
Issues   = "https://github.com/jmmaloney3/portopt/issues"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"] 